--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Viraj Amin - Portfolio</title>
+  <title>Viraj Amin - Portfolio</title>	
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -89,7 +89,7 @@
     <section id="resume">
       <h2>For More Information</h2>
       <div class="resume-box">
-        <a href="assets/Viraj Amin-GIS_SME-Resume.pdf" class="btn" download>
+        <a href="Viraj Amin-GIS_SME-Resume.pdf" class="btn" download>
           Download My Resume (PDF)
         </a>
       </div>
