--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
       <div class="skills-container">
         <div class="skills-box">
           <h3>Professional Skillset</h3>
-          <p>Technical Proposal Writing, Pre-Sales Solutioning, Business Analysis, Agile Methodology (Scrum), Client Communication</p>
+          <p>Technical Proposal Writing, Pre-Sales Solutioning, Proof of Concept,  Requirement Gathering, Business Analysis, Agile Methodology (Scrum), Client Interactions, Risk Assessment</p>
         </div>
         <div class="skills-box">
           <h3>GIS & Technical Skillset</h3>
-          <p>QGIS, PostGIS, GeoServer, OpenLayers, ArcGIS Desktop, ArcGIS Pro, Python (NumPy, GeoPandas), FOSS4G Stack, Spatial Database Management</p>
+          <p>Image Processing & Visualization, QGIS, PostGIS, GeoServer, OpenLayers, Custom Plugin Development, ArcGIS Desktop, ArcGIS Pro, Python (Pyqgis, Arcpy), FOSS4G Stack, Spatial Database Management</p>
         </div>
       </div>
     </section>
